[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Welcome.gd" type="Script" id=1]
[ext_resource path="res://fonts/SF Atarian System.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/sun.png" type="Texture" id=3]
[ext_resource path="res://images/moon.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="Welcome" type="Node2D"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1280.0
margin_bottom = 768.0

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 761.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="PanelContainer/Panel"]
margin_top = 63.0
margin_right = 1263.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 2 )
text = "The Sun and the Moon"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/Panel"]
margin_left = 303.0
margin_top = 233.0
margin_right = 960.0
margin_bottom = 664.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][img]res://images/Game Off 2018.png[/img][/center]
[center]
A game created for [url=https://itch.io/jam/game-off-2018]Game Off 2018[/url] by Pete Goodwin[/center]
[center]Created in [url=https://godotengine.org/]Godot[/url] V3.1 Alpha 2[/center]
[center]Updated to V3.2.2[/center]"
text = "

A game created for Game Off 2018 by Pete Goodwin
Created in Godot V3.1 Alpha 2
Updated to V3.2.2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="PanelContainer/Panel"]
margin_left = 303.0
margin_top = 683.0
margin_right = 430.0
margin_bottom = 737.0
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="SettingsButton" type="Button" parent="PanelContainer/Panel"]
margin_left = 473.0
margin_top = 683.0
margin_right = 615.0
margin_bottom = 737.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="CreditsButton" type="Button" parent="PanelContainer/Panel"]
margin_left = 663.0
margin_top = 683.0
margin_right = 790.0
margin_bottom = 737.0
custom_fonts/font = SubResource( 4 )
text = "Credits"

[node name="HelpButton" type="Button" parent="PanelContainer/Panel"]
margin_left = 833.0
margin_top = 683.0
margin_right = 960.0
margin_bottom = 737.0
custom_fonts/font = SubResource( 4 )
text = "Help"

[node name="The Sun" type="Sprite" parent="PanelContainer/Panel"]
position = Vector2( 253, 343 )
texture = ExtResource( 3 )

[node name="The Moon" type="Sprite" parent="PanelContainer/Panel"]
position = Vector2( 1003, 353 )
texture = ExtResource( 4 )
[connection signal="meta_clicked" from="PanelContainer/Panel/RichTextLabel" to="." method="on_label_meta_clicked"]
[connection signal="pressed" from="PanelContainer/Panel/StartButton" to="." method="on_start_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/SettingsButton" to="." method="on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/CreditsButton" to="." method="on_credits_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/HelpButton" to="." method="on_help_pressed"]
